--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <!-- Google Fonts
+    <!-- Typekit
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->    
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
+    <script src="https://use.typekit.net/ysa3sua.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 	<!-- CSS
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->    
