Fixed Punctuation issue and no newspaper results issue
- Parsed place name html then encoded to fix punctuation for Trove API
call
- Added conditional for cases where there are no newspaper results, for
when there ARE picture results and when there ARE NO picture results.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
 	        	</div>
 	        </div>
 	    </section>
+        
+        <!---- Error page ---->    
+	    <section id="locError">
+	        <div class="row">
+	        	<div class="eight columns">
+                    <!-- Example error text -->
+                    <p>Oops. No results.</p>
+                    <p>Why don't you take some pics and upload them to Trove so others can find them?</p>
+                    <button id="noresultsBack">Back</button>
+                </div>
+	        </div>
+	    </section>
 	
 	
 	    <!---- Loading: finding nearby places ---->    
