--- a/index.html
+++ b/index.html
@@ -147,16 +147,28 @@
 	    <section id="loading" class="hide">
 	        <div class="row">
 	        	<div class="eight columns">
-
-			    	<!-- Loading screen -->
-				    <div class="compass-icon"></div>
-					<p>Finding places near you</p>
-					
-		        	<!-- Original markup -->
-		        	<div id="loader">
-			            <div id="loader1"></div>
-			            <div id="loader2"></div>
-		        	</div>
+			    	<!-- Compass animation -->
+				    <svg id="compass" x="0px" y="0px" width="463.985px" height="463.985px" viewBox="19.007 18.008 463.985 463.985" enable-background="new 19.007 18.008 463.985 463.985" xml:space="preserve">
+                        <!-- Compass base -->
+                        <path id="compassBase" fill="#303030" d="M251.3,18.008c-127.852,0-232.293,103.841-232.293,231.692S123.448,481.993,251.3,481.993
+                            c127.851,0,231.692-104.441,231.692-232.293S379.151,18.008,251.3,18.008z M260.293,465.584c0.385-1.001,0.61-2.128,0.61-3.398
+                            c0-10.805,0-21.009,0-31.813c-0.6-12.006-19.207-12.006-19.207,0c0,10.804,0,21.008,0,31.813c0,1.271,0.226,2.397,0.61,3.398
+                            c-112.271-4.657-203.125-96.027-206.951-208.501c0.864,0.267,1.813,0.42,2.86,0.42c10.804,0,21.608,0,32.413,0
+                            c12.005,0,12.005-19.207,0-19.207c-10.805,0-21.609,0-32.413,0c-0.992,0-1.894,0.142-2.722,0.383
+                            C41.09,127.997,130.501,38.615,241.901,33.83c-0.133,0.681-0.205,1.408-0.205,2.185c0,11.404,0,22.209,0,33.613
+                            c0,12.005,19.207,12.005,19.207,0c0-11.404,0-22.209,0-33.613c-0.037-0.777-0.144-1.506-0.309-2.187
+                            c110.986,4.759,200.983,94.257,206.519,205.05c-0.984-0.367-2.088-0.582-3.328-0.582c-10.805,0-21.009,0-31.813,0
+                            c-12.604,0-12.604,19.207,0,19.207c10.805,0,21.009,0,31.813,0c1.3,0,2.45-0.236,3.468-0.638
+                            C463.536,369.439,372.637,460.924,260.293,465.584z"/>
+                        <!-- Compass needle -->
+                        <path id="compassNeedle" fill="#303030" d="M239.366,351.279c-0.611,0-0.611,0-0.611,0c-2.446,0-9.172-1.834-12.229-12.229l-14.064-45.25
+                            c-1.835-6.114-9.173-12.841-14.676-14.676l-44.638-14.675c-10.396-3.669-11.618-9.784-12.23-12.842
+                            c0-2.445,0.612-9.172,9.784-14.063l172.437-86.219c9.784-4.891,14.676-1.834,17.122,0.612c2.445,2.445,5.503,7.949,0.611,17.122
+                            l-88.054,172.437C248.538,350.056,242.424,351.279,239.366,351.279z M242.424,336.603L242.424,336.603L242.424,336.603z
+                             M161.097,250.385l40.969,13.453c11.007,3.668,21.402,14.675,25.071,25.682l12.841,41.58l82.55-162.042L161.097,250.385z
+                             M155.594,248.551L155.594,248.551L155.594,248.551z"/>
+                    </svg>
+					<p>Finding places near you...</p>
 	        	</div>
 	        </div>
 	    </section>
@@ -195,7 +207,32 @@
 	        	<div class="eight columns">
 
 			    	<!-- Loading screen -->
-				    <div class="man-icon"></div>
+				    <svg id="discoveringGuy" x="0px" y="0px" width="489.79px" height="367.042px" viewBox="4.99 116.118 489.79 367.042" enable-background="new 4.99 116.118 489.79 367.042" xml:space="preserve">
+                        <g>
+                            <path fill="#303030" d="M305.889,481.886c60.877-45.908,129.24-95.809,173.652-158.184c7.484-10.479,16.967-24.451,14.971-37.925
+                                c-1.996-17.465-21.457-32.435-33.434-42.914c-21.957-17.964-45.908-32.934-70.359-46.906c-11.977-6.985-26.447-17.465-39.92-21.457
+                                c-15.969-4.491-36.926-0.998-53.393-0.998c-19.961,0-39.922,0-59.882,0c-7.983,0-7.983,12.476,0,12.476
+                                c33.933,0,67.366,0.499,101.298,0c2.994,0,11.477,0.998,6.486-0.499c4.99,1.497,9.98,4.99,14.473,7.484
+                                c19.461,10.479,38.922,21.458,57.385,33.434c20.957,13.473,46.406,29.441,60.379,50.898c8.982,13.972,0.998,25.948-7.484,38.423
+                                c-25.449,36.427-61.377,66.367-94.811,94.811c-24.951,20.958-49.9,41.417-75.85,60.878
+                                C293.414,475.898,299.401,486.877,305.889,481.886L305.889,481.886z"/>
+                            <path fill="#303030" d="M188.123,482.385C87.325,482.385,4.99,400.549,4.99,299.252c0-100.799,81.836-183.134,183.133-183.134
+                                c101.299,0,183.135,81.836,183.135,183.134C371.258,400.549,289.422,482.385,188.123,482.385z M188.123,129.092
+                                c-93.812,0-170.159,76.348-170.159,170.659s76.348,170.658,170.658,170.658c94.312,0,170.659-76.347,170.659-170.658
+                                S282.436,129.092,188.123,129.092z"/>
+                            <path fill="#303030" d="M113.274,270.808c-18.463,0-33.434-14.97-33.434-33.433c0-18.464,14.971-33.434,33.434-33.434
+                                s33.433,14.97,33.433,33.434C147.205,255.34,132.236,270.808,113.274,270.808z M113.274,215.918
+                                c-11.478,0-20.958,9.481-20.958,20.959c0,11.477,9.48,20.958,20.958,20.958c11.477,0,20.958-9.481,20.958-20.958
+                                C134.731,225.399,125.249,215.918,113.274,215.918z"/>
+                            <path fill="#303030" d="M262.975,270.808c-18.464,0-33.434-14.97-33.434-33.433c0-18.464,14.97-33.434,33.434-33.434
+                                c18.463,0,33.434,14.97,33.434,33.434C296.906,255.34,281.936,270.808,262.975,270.808z M262.975,215.918
+                                c-11.478,0-20.959,9.481-20.959,20.959c0,11.477,9.481,20.958,20.959,20.958c11.477,0,20.957-9.481,20.957-20.958
+                                C284.432,225.399,274.951,215.918,262.975,215.918z"/>
+                            <path fill="#303030" d="M188.123,322.705c-15.469,0-27.943-12.476-27.943-27.944c0-6.487,5.488-6.487,12.475-6.487
+                                c7.984,0,21.457,0,29.94,0c7.983,0,12.974,0,12.974,6.487C216.068,310.229,203.593,322.705,188.123,322.705z M174.152,300.749
+                                c2.495,5.488,7.984,8.981,13.972,8.981c5.988,0,11.478-3.991,13.973-8.981C194.611,300.749,182.136,300.749,174.152,300.749z"/>
+                        </g>
+                    </svg>
 				    
 				    <!-- Append place name to this p tag -->
 					<p id="load-artefacts">Discovering artefacts about </p>
