Animation compatibility continued

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 	
 	
 	    <!-- ---------- Loading: finding nearby places ---------- -->    
-	    <section id="loading" class="hide">
+	    <section id="loading" >
 	        <div class="row">
 	        	<div class="eight columns">
 			    	<!-- Compass animation -->
-				    <svg id="compass" x="0px" y="0px" width="463.985px" height="463.985px" viewBox="19.007 18.008 463.985 463.985" enable-background="new 19.007 18.008 463.985 463.985" xml:space="preserve">
+				    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="compass" x="0px" y="0px" width="463.985px" height="463.985px" viewBox="19.007 18.008 463.985 463.985" enable-background="new 19.007 18.008 463.985 463.985" xml:space="preserve">
                         <!-- Compass base -->
                         <path id="compassBase" fill="#303030" d="M251.3,18.008c-127.852,0-232.293,103.841-232.293,231.692S123.448,481.993,251.3,481.993
                             c127.851,0,231.692-104.441,231.692-232.293S379.151,18.008,251.3,18.008z M260.293,465.584c0.385-1.001,0.61-2.128,0.61-3.398
