--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	
 	
 	    <!-- ---------- Loading: finding nearby places ---------- -->    
-	    <section id="loading" >
+	    <section id="loading" class="hide">
 	        <div class="row">
 	        	<div class="eight columns">
 			    	<!-- Compass animation -->
