Added 'powered by Google'

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
                     <div id="places"></div>
 			    </div>
 		    </div>
+            
+            <div class="row">
+                <div id="google-strip" class="twelve columns">
+                    <img id="google" src="images/powered_by_google_on_non_white.png" alt="Powered by Google.">
+                </div>
+            </div>
 	    </section>
 
 	
