Randomise results, set max-width on results
And center align fixed nav div

--- a/index.html
+++ b/index.html
@@ -297,17 +297,18 @@
                 <a class="about-link">About</a>
             </div>
             
-	        <div class="row afternav">
-	        	<div class="twelve columns center" id="resultsList">
-                    <!-- Placename gets appended here -->
-		        	<img class="marker" src="images/Location-icon-inverse.svg">
-		        	<h2 id="place-name"></h2>
+            <div class="container results-container">
+                <div class="row afternav">
+                    <div class="twelve columns center" id="resultsList">
+                        <!-- Placename gets appended here -->
+                        <img class="marker" src="images/Location-icon-inverse.svg">
+                        <h2 id="place-name"></h2>
 
-					<!-- Results get appended here -->		        	
-		        	<div class="all-results">
-		        	</div>
+                        <!-- Results get appended here -->		        	
+                        <div class="all-results"></div>
+                    </div>
                 </div>
-	        </div>
+            </div>
 	    </section>
 	
 	
@@ -324,7 +325,7 @@
             <div id="flickr-content" class="full-height">
                 <div id="img-container" class="container">
                     <div class="row">
-                        <div class="twelve columns">
+                        <div class="ten columns offset-by-one">
                             <!-- Artefact image -->
                             <img src="" class="artefact-img">
                         </div>
@@ -387,7 +388,7 @@
                         </div>
 
                         <div class="six columns offset-by-three">
-                            <a href="" target="_blank" class="result-button button">Open this in Trove</a>
+                            <a href="" target="_blank" id="news-open" class="result-button button">Open this in Trove</a>
                         </div>
                     </div>
                 </div>
