Added links in About section
Added links for uploading images to Trove and correcting newspaper text.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <p>All the pictures and newspaper articles you see in Unexpected Discoveries are from Trove, a service provided by the National Library of Australia that brings together collections of items from all around Australia. Trove can connect you to hundreds of millions of items and Unexpected Discoveries accesses a selection of these.</p>
 
                         <h3>How can I get involved?</h3>
-                        <p>Trove and Unexpected Discoveries are made even better by user contributions! Find out how you can <a href="">upload your own images to Trove</a> or help <a href="">correct newspaper text</a> that hasn’t been translated properly.</p>
+                        <p>Trove and Unexpected Discoveries are made even better by user contributions! Find out how you can <a href="http://help.nla.gov.au/trove/using-trove/creating-contributing/adding-images" target="_blank">upload your own images to Trove</a> or help <a href="http://help.nla.gov.au/trove/digitised-newspapers/text-correction-guidelines" target="_blank">correct newspaper text</a> that hasn’t been translated properly.</p>
                         
                         <!-- ---------- Disclaimer ---------- -->
                         <h3>Disclaimer</h3>
