--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 		    <div class="row afternav">
 			    <div class="eight columns offset-by-two">
 					<h2>Make a discovery</h2>
+					<p id="loc-denied">Uh oh, we couldn't find you. Next time, please make sure we can access your location. In the meantime... here are some places near Canberra.</p>
                     <div id="places"></div>
 			    </div>
 		    </div>
