--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="ten columns offset-by-one">
-                            <p id="doozy">Are there errors in this text? if there are, what a doozy! Help us correct them by opening this article in Trove!</p>
+                            <p id="doozy">Are there errors in this text? If there are, what a doozy! Help us correct them by opening this article in Trove!</p>
                         </div>
 
                         <div class="six columns offset-by-three">
