Trove API Error Handling
- Changed getJSON requests to ajax to use the timeout status.
- If API error fails or if it takes longer than 7 seconds the call will
abort and user will be returned to place selection with an error
message.
- Also added function for intro page so it fades out on click as well as
after 2 seconds

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
 <body>
 	    <!-- ---------- Intro ---------- -->    
-	    <section id="intro" class="center hide">
+	    <section id="intro" class="center">
             <div id="intro-container" class="container full-height">
                 
                 <div id="intro-row" class="row full-height">
@@ -207,6 +207,7 @@
 			    <div class="eight columns offset-by-two">
 					<h2>Make a discovery</h2>
                     <p id="loc-denied">Uh oh, we couldn't find you. Next time, please make sure we can access your location. In the meantime... here are some places near Canberra.</p>
+                    <p id="apiFail" class="errorMessage hide">Uh oh, connection problems - please try again.</p>
                     <div id="places"></div>
 			    </div>
 		    </div>
