--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			    <div class="eight columns offset-by-two">
 					<h2>Make a discovery</h2>
                     <p id="loc-denied" class="error-message hide">Uh oh, we couldn't find you. Next time, please make sure we can access your location. In the meantime... here are some places near Canberra.</p>
-                    <p id="api-fail" class="error-message hide">Uh oh, there seem to be some connection problems. Please try again.</p>
+                    <p id="api-fail" class="error-message hide"><img src="images/error-icon.svg" alt="Error."><br>Uh oh, there seem to be some connection problems. Please try again.</p>
                     <div id="places"></div>
 			    </div>
 		    </div>
